Miurung la reng in-edit nang [[Special:Contributions/2003:5B:E835:301:20DA:F8E5:59D8:4EF|2003:5B:E835:301:20DA:F8E5:59D8:4EF]] ([[User talk:2003:5B:E835:301:20DA:F8E5:59D8:4EF|Pamisabi-sabi]]); binalik neng [[User:CommonsDelinker|CommonsDelinker]] king...

--- a/Hawaii.mw
+++ b/Hawaii.mw
@@ -1,5 +1,58 @@
-[[File:Hercules bronze in the Vatican Museums.jpg|thumb|Der Kalif in voller Pracht.]]
-Hawaii ist eine Inselkette in mitten des gigantischen Pazifischen Ozean. Seit dem 01.01.2017 befindet sich das prächtige Urlaubsparadies im Besitz des Kalifen Tom Gehle, daher ist Hawaii seitdem auch kein Staat mehr angehörig USA. Allerdings besiedelt er das Gebiet nur als Sommerprovinz. Es herrscht striktes Einreiseverbot für Touristen und die Inselkette trägt nur noch eine Benutzung: das Feiern von exzessiven Partynächten. Falls Interesse besteht Asyl auf der Inselkette zu beantragen so müssen sie diese Verträge mit dem Kalifen persönlich besprechen. Unter diesem kurzen Informationstext finden sich einige Aufnahmen der herrlichen Natur von Hawaii.<gallery>
+:<div class="dablink">''Ing artikulung iti tungkul ya keng U.S. State. para kareng aliwang gamit ning kataya, kalupa na mo reng [[Hawaii (island)|ing pulu]], [[{{PAGENAME}} (disambiguation)]].''</div>{{US state |
+ Name = Hawaii |
+ Fullname = State ning Hawaii<br />Moku{{okina}}āina o Hawai{{okina}}i |
+ Flag = Flag of Hawaii.svg |
+ Flaglink = [[Bandera ning Hawaii]] |
+ Seal = Seal of the State of Hawaii.svg |
+ Map = Hi-locator.png |
+ Nickname = Ing Aloha State |
+ Capital = [[Honolulu, Hawaii|Honolulu]] |
+ LargestCity = [[Honolulu, Hawaii|Honolulu]] |
+ OfficialLang = [[Hawaiian language|Hawaiian]] and [[Hawaiian English|English]] |
+ Governor = [[Linda Lingle]] (R)|
+ Senators = [[Daniel Inouye]] (D)
+[[Daniel Akaka]] (D) |
+ Representatives = [[Neil Abercrombie]] (D)| [[Ed Case]] (D) |
+ PostalAbbreviation = HI |
+ AreaRank = 43<sup>rd</sup> |
+ TotalAreaUS =11,941 |
+ TotalArea = 28,337 |
+ LandAreaUS = 6,428|
+ LandArea = 16,649 |
+ WaterAreaUS = 4,507 |
+ WaterArea = 11,672 |
+ PCWater = 41.2 |
+ PopRank = 42<sup>nd</sup> |
+ 2000Pop = 1,211,537 |
+ DensityRank = 13<sup>th</sup> |
+ 2000DensityUS = 110.7 |
+ 2000Density = 42.75 |
+ AdmittanceOrder = 50<sup>th</sup> |
+ AdmittanceDate = [[August 21]], [[1959]] |
+ TimeZone = [[Hawaii-Aleutian Standard Time Zone|Hawaii]]: [[Coordinated Universal Time|UTC]]-10/ (no daylight saving time) |
+ Longitude = 154°40'W to 162°W |
+ Latitude = 18°55'N to 29°N |
+ WidthUS = n/a |
+ Width = n/a |
+ LengthUS =1,522  |
+ Length = 2,450 |
+ HighestElevUS = [[Mauna Kea]]&nbsp;13,796 |
+ HighestElev = 4,205 |
+ MeanElevUS =3,035 |
+ MeanElev = 925 |
+ LowestElevUS = 0 |
+ LowestElev = 0 |
+ ISOCode = US-HI |
+ Website = www.hawaii.gov/
+}}
+
+[[File:Pāhoehoe and Aa flows at Hawaii.jpg|Pāhoehoe ampong ʻAʻā  ing lava daragus kambe makadane king Maragul a Pulu ning Hawaii Ingyang Septiembri, 2007|thumb|300px]]
+Ing '''State ning Hawaii'''  ({{Audio-IPA|en-us-Hawaii.ogg|/həˈwaɪ.iː/}} or {{IPAlink-en|həˈwaɪʔiː}} keng English; [[Hawaiian language|Hawaiian]]: '''Mokuʻāina o Hawaiʻi''')  metung yang  [[U.S. state|state]] king [[United States]], atiu keng  [[kapuluan]] keng kalibudtarang [[Pacific Kadayatmalatan]] [[mauli]]ng albugan ning continental United States, maulingaslagan ning [[Japon]], ampong [[pangulungaslagan]] ning [[Australia]]. Metanggap ya keng Aniban ing state inyang [[Agostu 21]], [[1959]], at meging yang  [[List of U.S. states by date of statehood|pang50 a state]]. Ing kayang tungku (kabisera) iyapin ing [[Honolulu, Hawaii|Honolulu]] keng pulu ning Oahu. Ing tauling diling sensus tatantian na mga 1,283,388 ya ing populasiun ning state.
+
+[[File:Map of Hawaii NA.png|thumb|right|Mapa ning Hawaii]]
+
+
+<gallery>
 Image:Niihau sep 2007.jpg|[[Niihau|Niihau (70 sq. mi.)]]
 Image:Kauai from space oriented.jpg|[[Kauai|Kauai (552.3 sq. mi.)]]
 Image:Island of Oahu - Landsat mosaic.jpg|[[Oahu|Oahu (598 sq. mi.)]]
