*Empty MediaWiki Message*

--- a/Los_Angeles,_California.mw
+++ b/Los_Angeles,_California.mw
@@ -62,7 +62,7 @@ Ing Los Angeles mitatag ya inyang [[1781]], a tetag ning [[Spain|Kastilang]] gob
 
 [[File:Los Angeles from Santa Ana Freeway; 2005.jpg|left|thumbnail|300px|[[Downtown Los Angeles]] mayayakit manibatan keng  [[Santa Ana Freeway]]]]
 
-[[File:Viewfromsky.jpg||left|thumbnail|300px|Ing akakit king  [[Palos Verdes]] Telapulu kambe ning Los Angeles keng makarayu]]
+[[File:Palos Verdes (aerial view).jpg||left|thumbnail|300px|Ing akakit king  [[Palos Verdes]] Telapulu kambe ning Los Angeles keng makarayu]]
 
 [[File:LA Echo.JPG|thumbnail|left|300px|Ing [[Echo Park, Los Angeles, California|Echo Park]] mayaykit kambe ning [[Arecaceae|Palm Trees]]]]
 
