--- a/Gambia.mw
+++ b/Gambia.mw
@@ -13,7 +13,7 @@
 |largest_city = [[Serrekunda]]
 |government_type = Republic
 |leader_title1 = [[Heads of State of The Gambia|President]]
-|leader_name1 = [[Yahya Jammeh]]
+|leader_name1 = [[Adama Barrow]]
 |area_rank = 158th
 |area_magnitude = 1 E10
 |area= 10,380
