*Empty MediaWiki Message*

--- a/Bratislava.mw
+++ b/Bratislava.mw
@@ -10,7 +10,7 @@ MIST--->ALBANIA
 |official_name =
 |motto         =
 |nickname      = Beauty on the Danube, Little Big City,
-|image         = Bratislava old town from castle hill.jpg
+|image         = Bratislava Panorama R01.jpg
 |image_caption = Bratislava's [[Old Town, Bratislava|Old Town]]
 |flag          = Flag of Bratislava.svg
 |symbol        = Coat of Arms of Bratislava.svg
@@ -225,9 +225,7 @@ Ing'''Bratislava''' — king kayang amlat '''Pozsony''' ampong '''Pressburg''' (
 == Kapatad lakanbalen ==
 Ing Bratislava maka [[town twinning|kambal]] ya kareng:<ref name="Twin">{{cite web|url=http://www.bratislava-city.sk/bratislava-twin-towns|title=''Bratislava City - Twin Towns''|publisher=<small>[[copyright|©]] 2003-2008 Bratislava-City.sk|accessdate=2008-10-26}}</small></ref>
 
-[[File:Slovak National Theatre in Bratislava - Old building.jpg|thumb|409x409px|
-[[Slovak National Theatre]] 
-]]
+[[File:Bratyslawa Teatr Narodowy.jpg|thumb|[[Slovak National Theatre]] ]]
 {|style="width:100%"
 |-
 |width=33.3%|
