--- a/Mike_Connors.mw
+++ b/Mike_Connors.mw
@@ -2,16 +2,16 @@
 | image = Mike Connors Mannix 1968.JPG
 | name = Mike Connors
 | birth_name = Krekor Ohanian
-| birth_date = {{Birth date and age|1925|8|15}} 
-| birth_place = [[Fresno, California|Fresno]], [[California]], USA
+| birth_date = {{Birth date |1925|8|15}} 
+| birth_place = [[Fresno, California|Fresno]], [[California]], USA - 26 january 2017
 | occupation=Artista king pelikula ampong telebisyon 
-| yearsactive = 1952–present
+| yearsactive = 1952–2007
 | alma_mater=[[University of California, Los Angeles]]
-| spouse = Mary Lou Willey (1949–present)
+| spouse = Mary Lou Willey (1949–2017)
 | children=Matthew Gunner Ohanian<br>
 Dana Lou Connors 
 }}
-I '''Mike Connors''' (mibait a '''Krekor Ohanian''' anyang Agosto 15, 1925) metung yang artistang Americanung pikabalwan dili antimong linage king [[detektib]] a Joe Mannix king seryeng pang-telebisyung [[Columbia Broadcasting System|CBS]] ''[[Mannix]]''.  Anyang 1959–1960 television season, linage yang imbestigador a lalaban king krimen a ausan da mung "Nick" king aliwang seryeng CBS, ing ''[[Tightrope (TV series)|Tightrope]]''.
+I '''Mike Connors''' (mibait a '''Krekor Ohanian''' anyang Agosto 15, 1925 - 26 january [[2017]]) metung yang artistang Americanung pikabalwan dili antimong linage king [[detektib]] a Joe Mannix king seryeng pang-telebisyung [[Columbia Broadcasting System|CBS]] ''[[Mannix]]''.  Anyang 1959–1960 television season, linage yang imbestigador a lalaban king krimen a ausan da mung "Nick" king aliwang seryeng CBS, ing ''[[Tightrope (TV series)|Tightrope]]''.
 
 ==Dalerayan==
 {{Reflist|2}}
