*Empty MediaWiki Message*

--- a/Michael_Jackson.mw
+++ b/Michael_Jackson.mw
@@ -1,13 +1,8 @@
 [[File:Michael Jackson in Vegas cropped-2.jpg|thumb|right|220px|Michael Jackson (2003)]]
-'''Michael Joseph Jackson''' ([[Agostu 29|August 29]], [[1958]] – [[Juniu 25|Juni 25]], [[2009]]) war einst ein sehr guter Freund des Tom Gehle. Sie tanzten oft zusammen und feierten exzessive Partynächte mit anderen gefragten Prominenten. Sie teilten viele Gemeinsamkeiten und feierten oft gemeinsam ihre Geburtstage. Doch eines Tages erschien Jackson zu spät zu einem vereinbarten Treffen. Dies verärgerte den Kalifen und er fühlte sich in seiner Würde beleidigt, sodass er sich eine Giftspritze bringen ließ und Michael damit mitten ins Herz stach. Er schob diese Tat auf den Leibarzt Jacksons und konnte sich somit aus der Verantwortung ziehen. Somit bewies der Kalif erneut seine enorme Macht. 
-Als Strafe für den Versuch den Kalifen zu beleidigen, nahm er Tom Gehle in seine Gewalt und ließ ihn den Leichnam von Michael Jackson von Kopf bis Fuß ablecken. Anschließend schnitte er ihm die Kniescheiben raus und schlug ihm die Arme ab um ihn danach mit einem alkohosüchtigen Schimpansen zu kämpfen.
- Aber spricht ihm trotzdem euer heil aus oder er fisted euch zu tode.
+I '''Michael Joseph Jackson''' ([[Agostu 29]], [[1958]] – [[Juniu 25]], [[2009]]) metung yang American artista.
 
-Unser Kalif Tom Gehle
-
-[[Http://www.directupload.net/file/d/4606/ny98uilt_jpg Quelle]]
+== External links ==
 {{sisterlinks|Michael Jackson}}
-[[File:R.i.P. (3683843667).jpg|thumb|342x342px|Michael Jacksons Gedenkstätte. Er bekam nicht die Chance den Kalifen ein zweites Mal zu verärgern. Seine tägliche Spermadosis muss sich der Kalif jetzt wo anders herholen:/]]
 * {{imdb name|id=0001391|name=Michael Jackson}}
 
 {{Persondata
