--- a/Rusia.mw
+++ b/Rusia.mw
@@ -48,7 +48,7 @@
 |footnotes                =
 }}
 Ing '''Russia''' ({{lang-ru|Росси́я}}, ''Rossiya''; [[International Phonetic Alphabet|mayayagkas]] {{IPA|[rʌ'sʲi.jə]}}), makanyan mu rin<ref>From Article&nbsp;1 of [[Constitution of Russia]]: "The names "Russian Federation" and "Russia" shall be equivalent."</ref> ing '''Russian Federation''' (Росси́йская Федера́ция, ''Rossiyskaya Federatsiya''; {{IPA|[rʌ'sʲi.skə.jə fʲɪ.dʲɪ'ra.ʦɪ.jə]}},(Russian language) {{Audio|Ru-Rossiyskaya Federatsiya Rossiya.ogg|listen}}), metung yang transcontinental a [[bangsa]] a makayatsat keng malapad a gabun ning [[Asia]] at [[Europa]]. Atin yang dagul a 17,075,400 [[km²]], ing Russia iya ing [[List of countries and outlying territories by total area|pekamaragul diling bangsa keti yatu]],<ref>Statistical Handbook on Poverty in the Developing World - Page 1 by Chandrika Kaul - 1999</ref> a atin sakup a alus dobli ing territoryu ning metung a kaduang pekamaragul a bangsa, ing [[Canada]], at dakal ya mineral at energy pikuanan. Ing Russia iya ing [[List of countries by population|pang-walung pekamarakal a populasyun]] keti yatu. Ing Russia makasepu ya kareng tutuking bangsa (padurut pabaligtad a relo manibat king pangulungalbugan papuntang maulingaslagan): [[Norway]], [[Finland]], [[Estonia]], [[Latvia]], [[Lithuania]], [[Poland]], [[Belarus]], [[Ukraine]], [[Georgia (bangsa)|Georgia]], [[Azerbaijan]], [[Kazakhstan]], [[People's Republic of China|China]], [[Mongolia]], at [[North Korea]]. Malapit ya naman keng [[United States]], [[Sweden]], at [[Japan]] karing lipat a mangalapit mung dayat malat antimo ring (ing [[Bering Strait]], ing [[Baltic Dayat Malat]], at [[La Pérouse Strait]], pamitukituki).
-[[File:Central highlands.jpg|thumbnail|left|[[Kalibudtarang GabunBabo ning Russia]], [[Zaraysk]]]]
+[[File:Осетр река.jpg|thumbnail|left|[[Kalibudtarang GabunBabo ning Russia]], [[Zaraysk]]]]
 [[File:Sochi-Lazarevskoe at night. (16214940092).jpg|thumbnail|left|[[Sochi]], [[Krasnodar Krai]]]]
 [[File:Magadan.jpg|thumbnail|right|[[Magadan Oblast|Magadan]], [[Russian Far East]]]]
 [[File:IE expansion.png|thumbnail|[[Kurgan hypothesis]]]]
