*Empty MediaWiki Message*

--- a/Wikipedia.mw
+++ b/Wikipedia.mw
@@ -4,7 +4,7 @@
 {{pp-move-indef}}
 {{infobox Website
 | name = Wikipedia
-| logo = [[File:k-wiki.jpg|100px]]
+| logo = [[File:Wikipedia-logo-pam.jpg|100px]]
 | screenshot = [[File:Www.wikipedia.org screenshot 2013.png|border|300px|Wikipedia's multilingual portal shows the project's different language editions.]]
 | caption = Ing screenshot ning ''multilingual portal'' (pasbul a miayaliwang amanu) ning Wikipedia.
 | url = [http://www.wikipedia.org/ www.wikipedia.org]
