*Empty MediaWiki Message*

--- a/Taranati.mw
+++ b/Taranati.mw
@@ -1,7 +1,7 @@
 {{taxobox
 |name = ''Averrhoa carambola''
 |image = Averrhoa carambola ARS k5735-7.jpg
-|image_caption = [[Carambola]]s still on the tree
+|image_caption = Deng taranati atiu la pa keng tanaman
 |regnum = [[Plant]]ae
 |unranked_divisio = [[Angiosperms]]
 |unranked_classis = [[Eudicots]]
@@ -18,7 +18,6 @@ Katutubu ya ing [[Mauli]]-[[aslagan]]g [[Asia]] ampo king subcontinenting Indian
 Tatanam de kareng lugal a malisangan (‘’tropical’’) ampong subtropical para kareng bunga ampong antimong tanaman a panulu.
 .<ref>http://www.ntbg.org/plants/plant_details.php?plantid=1377</ref><ref name=Editors2002>{{Citation| last1 = Editors | first1 = P.K. Warrier| last2 = Illustrations | first2 = R. Vasudevan Nair| year = 2002| title = Indian medicinal plants : a compendium of 500 species| pages = 224| url = http://books.google.com/?id=GkBRXzpqD98C&pg=PA224&dq=Averrhoa+carambola+description| isbn = 81-250-0301-0| publisher = Orient Longman| location = Madras}}</ref>
 
-[[File:Averrhoa carambola ARS k5735-7.jpg|thumb|200px|Deng taranati atiu la pa keng tanaman]]
 [[File:Belimbing.jpg|thumb|200px|Belimbing, nung nu makanyan yang mayayaus king Indonesia]]
 [[File:New & old leaves I IMG 8444.jpg|thumb|left|Laun at bayung bulung king [[Kolkata]], [[West Bengal]], [[India]].]]
 
