*Empty MediaWiki Message*

--- a/Taranati.mw
+++ b/Taranati.mw
@@ -14,7 +14,7 @@
 |binomial_authority = [[Carl Linnaeus|L.]]
 }}
 Ing '''taranati'''/'''tarnati''' (''Averrhoa carambola'') metung yang species ning [[pun dutung]]  king Familia [[Oxalidaceae]]. King Ingles, mayayaus yang '''[[carambola]]''' ampong '''starfruit.''' King Tagalug, ‘’’balimbing’’’ ing aus da.<ref>http://www.itis.gov/servlet/SingleRpt/SingleRpt?search_topic=all&search_value=Averrhoa+carambola&search_kingdom=every&search_span=exactly_for&categories=All&source=html&search_credRating=All</ref> 
-Katutubu ya ing [[Mauli]]-[[aslagan]]g [[Asia]] ampo king subcontinenting Indian ing pun dutung a ini.<ref>[http://animhosnan.blogspot.com/2010/04/carambola.html Carambola]</ref><ref>[http://globinmed.com/index.php?option=com_content&view=article&id=62839:averrhoa-carambola-l&catid=365:a Avverhoa Carambola L.]</ref> metung yang malating pun dutung o <nowiki>[[palungpung]]</nowiki> a miraras 5–12 metru king katas, at maki sampagang rosas anggang malutu kule-ubi. Malati la ampong katabas campana deng sampaga na, at maki limang petal a mamuti-muti gilid. Pabanua yang manyampaga kareng malisangan a clima. 
+Katutubu ya ing [[Mauli]]-[[aslagan]]g [[Asia]] ampo king subcontinenting Indian ing pun dutung a ini.<ref>[http://animhosnan.blogspot.com/2010/04/carambola.html Carambola]</ref><ref>[http://globinmed.com/index.php?option=com_content&view=article&id=62839:averrhoa-carambola-l&catid=365:a Avverhoa Carambola L.]</ref> metung yang malating pun dutung o [[palungpung]] a miraras 5–12 metru king katas, at maki sampagang rosas anggang malutu kule-ubi. Malati la ampong katabas campana deng sampaga na, at maki limang petal a mamuti-muti gilid. Pabanua yang manyampaga kareng malisangan a clima. 
 Tatanam de kareng lugal a malisangan (‘’tropical’’) ampong subtropical para kareng bunga ampong antimong tanaman a panulu.
 .<ref>http://www.ntbg.org/plants/plant_details.php?plantid=1377</ref><ref name=Editors2002>{{Citation| last1 = Editors | first1 = P.K. Warrier| last2 = Illustrations | first2 = R. Vasudevan Nair| year = 2002| title = Indian medicinal plants : a compendium of 500 species| pages = 224| url = http://books.google.com/?id=GkBRXzpqD98C&pg=PA224&dq=Averrhoa+carambola+description| isbn = 81-250-0301-0| publisher = Orient Longman| location = Madras}}</ref>
 
