*Empty MediaWiki Message*

--- a/Ongsoy.mw
+++ b/Ongsoy.mw
@@ -1,7 +1,5 @@
-{{Otheruses}}
-:''"Chinese parsley" redirects here. This can also refer to the unrelated ''[[Heliotropium curassavicum]].
 {{taxobox
-|name = Coriander
+|name = Ongsoy
 |image =Coriandrum_sativum_-_Köhler–s_Medizinal-Pflanzen-193.jpg
 |regnum = [[Plantae]]
 |unranked_divisio = [[Angiosperms]]
@@ -12,23 +10,59 @@
 |genus = '''''Coriandrum'''''
 |species = '''''C. sativum'''''
 |binomial = ''Coriandrum sativum''
-|binomial_authority = [[Carolus Linnaeus|L.]]
-|}}
-{{nutritionalvalue | name=Coriander leaves, raw | kJ=95 | protein=2 g | fat=0.5 g | carbs=4 g | fiber=3 g | vitA_ug=337 | vitC_mg=27 | right=1 }}
+|binomial_authority = [[Carl Linnaeus|L.]]
+}}
+{{nutritional value | name=Coriander (cilantro) leaves, raw
+| water=92.21 g
+| kJ=95
+| protein=2.13 g
+| fat=0.52 g
+| carbs=3.67 g
+| fiber=2.8 g
+| sugars=0.87
+| calcium_mg=67
+| iron_mg=1.77
+| magnesium_mg=26
+| phosphorus_mg=48
+| potassium_mg=521
+| sodium_mg=46
+| zinc_mg=0.5
+| manganese_mg=0.426
+| vitC_mg=27
+| thiamin_mg=0.067
+| riboflavin_mg=0.162
+| niacin_mg=1.114
+| pantothenic_mg=0.57
+| vitB6_mg=0.149
+| folate_ug=62
+| vitA_ug=337
+| betacarotene_ug=3930
+| lutein_ug=865
+| vitE_mg=2.5
+| vitK_ug=310
+| source_usda = 1
+| note=[http://ndb.nal.usda.gov/ndb/search/list?qlookup=11165&format=Full Link to USDA Database entry]
+}}
+{{stack end}}
 
-Ing '''Coriander''' (''Coriandrum sativum'') metung yang [[annual plant|banuaan]] [[herb]] keng familiang [[Apiaceae]]. kebaluan ya naman bilang '''Chinese parsley''' o kaya, lalu na king America, bilang '''cilantro'''. Ing Coriander katutubu ya king mauling [[Europa]] ampong [[Pangulu]]ng Africa anggang king maulingalbugan Asia. Malambut ya, alang bulbul a tanaman a daragul anggang 50&nbsp;cm [20 in.] katas. Deng bulung aliwaliwa la tabas, malapad lalam, ampong payat ampong mabulbul king matas kareng lele sampaga.
-== Dalerayan ==
-<references/>
+Ing '''ongsoy''' (''Coriandrum sativum''), a mayayaus '''cilantro''' king Castila, ampong '''cilantro''', '''Chinese parsley''' o '''dhania''' king Ingles,<ref>{{cite web|url=http://oald8.oxfordlearnersdictionaries.com/dictionary/dhania|title=dhania|work=Oxford Advanced Learner's Dictionary}}</ref> metung yang [[banwahan a tanaman|banwahan]] a yerba king familia [[Apiaceae]]. Katutubu ya ing ongsoy kareng labuad a manibat king [[mauli]]ng Europa ampong [[pangulu]]ng Africa angga king [[mauli]]ng [[albugan]]g Asia. Metung yang malambat a tanaman a daragul anggang {{convert|50|cm|in|abbr=on}} katas. Miyayaliwa la tabas deng bulung, oneng keraklan katabas lang balugbug (''lobed'') king pun ning tanaman, at payat la ampong mala-pakpak o bulbul banda kareng tangkeng manyampaga. Makabili la reng [[sampaga]] kareng mangalating [[umbel]], a maputi o maputlang rosas, a e mitutulid tabas  white or very pale pink, (''asymmetrical''), a maki petal a makaturu padayu king umbel a mas makaba (5–6&nbsp;mm) kesa kareng makaturu kaniti (1–3&nbsp;mm mu kakaba). Mabilug ya ing [[bunga]], a malanging  [[schizocarp]] a {{convert|3|–|5|mm|abbr=on}} kalapad. Lipat ning kakanan dong dili ra deng butul, gagamitan da la ring pampalasa deti, o pamulug do kayabe da reng aliwang pamangan.
 
-== Dagdag pamamasa ==
+==Dalerayan==
+{{Reflist|30em}}
+
+==Karagdagang babasan==
 {{Commons|Coriandrum sativum}}
-* Katzer, Gernot [http://www.uni-graz.at/~katzer/engl/Cori_sat.html Coriander Seeds and Cilantro (Coriandrum sativum)]
-* Noxon, Heather and Meyer, Alex (2004). Genetic Analysis of PTC and Cilantro Taste Preferences.  MindExpo 2004
+* Katzer, Gernot [http://gernot-katzers-spice-pages.com/engl/Cori_sat.html Coriander Seeds and Cilantro (Coriandrum sativum)]
+* Noxon, Heather and Meyer, Alex (2004). Genetic Analysis of PTC and Cilantro Taste Preferences. MindExpo 2004
+
 
 {{Herbs & spices}}
+{{Edible Apiaceae}}
+{{Use dmy dates|date=August 2011}}
 
 [[Category:Edible Apiaceae]]
 [[Category:Herbs]]
+[[Category:Medicinal plants]]
+[[Category:Plants used in Native American cuisine]]
 [[Category:Spices]]
-
-[[eo:Koriandro]]
+[[Category:Plants described in 1753]]
