*Empty MediaWiki Message*

--- a/Labanan_ning_Sardarapat.mw
+++ b/Labanan_ning_Sardarapat.mw
@@ -1,6 +1,6 @@
 {{Infobox Military Conflict
 |conflict=Labanan ning Sardarapat</br> Սարդարապատի ճակատամարտ <br /> Sardarapat Savaşı
-|image=[[File:Sardarapat memorial.JPG|300px]]
+|image=[[File:Sardarapat memorial.jpg|300px]]
 |caption=Ing monumentung panalalang makatagulaling king pamaniambut da reng Armenian king labanan ning Sardarapat king [[w:Armavir (province)|Armavir]], [[Armenia]].
 |date=[[May 24]]-[[May 26|26]] [[1918]]
 |place=[[Sardarapat]], [[Armenia]]
