*Empty MediaWiki Message*

--- a/Mumbai.mw
+++ b/Mumbai.mw
@@ -5,7 +5,7 @@
 |type_2             = capital
 |latd=18.96 |longd=72.82
 |locator_position   = right
-|skyline            = DowntownBombay.jpg |650px
+|skyline            = File:Downtown Mumbai.jpg|650px
 |skyline_caption    = Ing [[Nariman Point]] ampo ing [[Cuffe Parade]] king downtown Mumbai
 |state_name         = Maharashtra
 |district           = • [[Mumbai City]]<br />• [[Mumbai Suburban]]
