*Empty MediaWiki Message*

--- a/Mangalore.mw
+++ b/Mangalore.mw
@@ -1,6 +1,6 @@
 {{Infobox Indian Jurisdiction
 |native_name=Mangalore
-|skyline=Www.kamat.com 13034.jpg
+|skyline=Town Hall 014.jpg
 |skyline_caption= Ing munisipiu ning Mangalore
 |latd=12.87
 |longd=74.88
