--- a/Kamuti.mw
+++ b/Kamuti.mw
@@ -1,7 +1,7 @@
 {{Taxobox
 | color = lightgreen
 | name = Sweet Potato
-| image = Sweetpotatoblossom5164.JPG
+| image = Sweet Potato Flower in Full bloom.jpg
 | image_width = 250px
 | image_caption = Sweet potato in flower<br />[[Hemingway, South Carolina]]
 | regnum = [[Plantae]]
