*Empty MediaWiki Message*

--- a/Don_Bosco_Technical_Institute,_Tarlac.mw
+++ b/Don_Bosco_Technical_Institute,_Tarlac.mw
@@ -24,7 +24,7 @@
 |nickname       = Bosconians, Busko
 |website        = [http://dbtarlac.edu.ph/ dbtarlac.edu.ph]
 }}
-[[Image:DBTarlac-Front.jpg|left|250px|thumb|Ing pasbul dalan ning Don Bosco Tarlac]]
+[[Image:03059jfSanto Cristo Don Bosco Technical Institute Tarlac Cityfvf 08.JPG|left|250px|thumb|Ing pasbul dalan ning Don Bosco Tarlac]]
 Ing '''Don Bosco Technical Institute'''  king [[Tarlac Lakanbalen]] (sadya, Don Bosco Academy), o kabud namu '''''Don Bosco Tarlac''''', metung yang pribadung pipagaralan a Katolikung pang pre-school, elementarya, ampong sekondaryo, at ing mumunang diling pipagaralan a Don Bosco king [[Filipinas]]. Ya kabud pipagaralan a akademiko-teknikal king [[Tarlac]]. Atyu king Sto. Cristo, [[Tarlac Lakanbalen]].  
 
 Pekilagyu de ing eskwela kang [[San Juan Bosco]], a bilalag ning Iglesia Catolicang Ibpa ampong Talaturu ding Kayanakan. Inampang ne ing kayang bye king pamanuru. Ba nan isundu ing obrang iti, tetag ne ing metung a aguman a relihyoso da reng pari ampong brother, - ing [[Salesians of Don Bosco]] (SDB).
