*Empty MediaWiki Message*

--- a/Vanessa_Minnillo.mw
+++ b/Vanessa_Minnillo.mw
@@ -1,4 +1,4 @@
-[[Image:200px-Vanessa Minnillo.jpg|right|thumb|Vanessa Minnillo]]
+[[File:Vanessa Minnillo.jpg|right|thumb|Vanessa Minnillo]]
 
 Y '''Vanessa Minnillo''' (mibait [[Nobiembri 9]], [[1980]] king  [[Filpinas]]) metung yang [[television personality]] a nung nu ya mu rin ing [[Miss Teen USA]] [[1998]].  
 
