*Empty MediaWiki Message*

--- a/Bamban,_Tarlac.mw
+++ b/Bamban,_Tarlac.mw
@@ -1,4 +1,4 @@
-[[File:DoloresGrottoBambanjf7738 12.JPG|right|Mapa ning Tarlac papalto ne nung nu ya karin ing Bamban]][[Image:BAMBAN-1-.jpg|Tete Nielsen king Bamban, Tarlac|thumb|220px|left]]
+[[File:DoloresGrottoBambanjf7738 12.JPG|right|200px|Mapa ning Tarlac papalto ne nung nu ya karin ing Bamban]][[Image:BAMBAN-1-.jpg|Tete Nielsen king Bamban, Tarlac|thumb|220px|left]]
 
 {{Philippine Census			
 | title = Sensus ning Populasyun <br> Bamban, Tarlac
