*Empty MediaWiki Message*

--- a/John_Adams.mw
+++ b/John_Adams.mw
@@ -1,7 +1,7 @@
 {{Otherpeople|John Adams}}
 {{Infobox_President | name=John Adams
 | nationality=American
-| image=160px-JohnAdams.jpg
+| image=John Adams, Gilbert Stuart, c1800 1815.jpg
 | order=2nd [[Pamuntuk ning United States]]
 | term_start=[[Marsu 4]], [[1797]]
 | term_end=[[Marsu 4]], [[1801]]
