*Empty MediaWiki Message*

--- a/Zachary_Taylor.mw
+++ b/Zachary_Taylor.mw
@@ -1,6 +1,7 @@
-{{Infobox_President | name=Zachary Taylor
+{{Infobox_President
+| name=Zachary Taylor
 | nationality=American
-| image=160px-Ztaylor.jpg
+| image=Ztaylor.jpg
 | order=pang12 [[Pamuntuk ning United States]]
 | term_start=[[Marsu 4]], [[1849]]
 | term_end=[[Juliu 9]], [[1850]]
