*Empty MediaWiki Message*

--- a/Papa_Pablo_VI.mw
+++ b/Papa_Pablo_VI.mw
@@ -1,6 +1,6 @@
 {{Infobox pope|
 Kapampangan name=Pablo VI|
-image=[[File:Paul sextus.jpg|200px]] |
+image=[[File:Paolovi.jpg|200px]] |
 birth_name=Giovanni Battista<br />Enrico Antonio<br />Maria Montini|
 term_start=[[Juniu 21]], [[1963]]|
 term_end=[[Agostu 6]], [[1978]]|
