*Empty MediaWiki Message*

--- a/Papa_Juan_Pablo_I.mw
+++ b/Papa_Juan_Pablo_I.mw
@@ -1,6 +1,6 @@
 {{Infobox Pope|
 English name=John Paul I|
-image=[[File:Juanpablouno.jpg|200px]]|
+image=[[File:Pope Ioannes Paulus I, 1968.jpg|200px]]|
 birth_name=Albino Luciani|
 term_start=[[Agostu 26]], [[1978]]|
 term_end=[[Septiembri 28]], [[1978]]|
