--- a/Papa_Juan_XXIII.mw
+++ b/Papa_Juan_XXIII.mw
@@ -1,7 +1,7 @@
 :''See also, 15th-century [[antipope]] [[Antipope John XXIII|John XXIII]]''
 {{Infobox pope|
 Kapampangan name=Juan XXIII|
-image=[[File:200px-Papa_Giovanni_XXIII.JPG|200px]]|
+image=[[File:Pope John XXIII - 1959.jpg|200px]]|
 birth_name=Angelo Giuseppe Roncalli|
 term_start=[[Octubri 28]], [[1958]]|
 term_end=[[Juniu 3]], [[1963]]|
