*Empty MediaWiki Message*

--- a/Jeddah.mw
+++ b/Jeddah.mw
@@ -1,6 +1,6 @@
 {{Infobox City |
 official_name = Lakanbalen ning Jeddah</br>جدة |
-image_skyline = Downtownjeddahksa.JPG|
+image_skyline = Jeddah dawn - panoramio.jpg|
 image_map =  Jedda_map.jpg|
 mapsize = 250px |
 map_caption = Lugal king kayaryan ning Saudi Arabia|
