*Empty MediaWiki Message*

--- a/George_W._Bush.mw
+++ b/George_W._Bush.mw
@@ -1,7 +1,7 @@
 {| class="messagebox protected" style="border: 1px solid #8888aa; padding: 0px; font-size:9pt;"
 |}{{Infobox President
 | name=George Walker Bush
-| image=[[File:George_W_Bush.jpg]]
+| image=George-W-Bush.jpeg
 | order=43rd [[Pamuntuk ning United States]]
 | term_start=[[Eneru 20]], [[2001]]
 | vicepresident=[[Dick Cheney]]
