--- a/Template:Authority_control.mw
+++ b/Template:Authority_control.mw
@@ -1,4 +1,4 @@
-<table class="navbox" style="padding:0px; border:none; background:none; border-spacing:0px;"><tr><td style="padding:0px;"><div id="normdaten" class="catlinks" style="margin:0px;">'''[[Authority control]]''':<!--
+<table class="navbox" style="padding:0px; border:none; background:none; border-spacing:0px;"><tr><td style="padding:0px;"><div id="normdaten" class="catlinks" style="margin:0px;">'''Authority control''':<!--
 *** GND ***
 --> {{#if: {{{GND|}}} | [[Universal Authority File|GND]]: [http://d-nb.info/gnd/{{{GND}}} {{{GND}}}] {{#if:{{{LCCN|}}}|&#124;}} }}<!--
 *** PND ***
