*Empty MediaWiki Message*

--- a/Columbia,_South_Carolina.mw
+++ b/Columbia,_South_Carolina.mw
@@ -2,7 +2,7 @@
 {{Infobox City |official_name = Columbia, South Carolina
 |nickname = "The Capital of Southern Hospitality" (Official), "The Big Friendly"
 |website = http://www.columbiasc.net/
-|image_skyline = Five_points_aerial.jpg
+|image_skyline = Columbia, South Carolina, skyline.jpg
 |image_size = 300px
 |image_caption = Skyline of Columbia
 |image_flag = ColumbiaSC.jpg
