*Empty MediaWiki Message*

--- a/AMA_Computer_University.mw
+++ b/AMA_Computer_University.mw
@@ -1,6 +1,6 @@
 {{Infobox_University
-|name             = [[Image:amacu07.png|245px]]
-|image            = [[File:AMA Computer University text logo.png]]
+|name             = [[File:AMA Computer University text logo.png|245px]]
+|image            = [[image:amacus.jpg]]
 |motto            = "Never rest on one's laurels" (E ka makukuntentu kareng tagumpe mung milabas)
 |established      = [[October 15]], [[1980]]
 |type             = [[Private university|Privadu]]
