*Empty MediaWiki Message*

--- a/Canada.mw
+++ b/Canada.mw
@@ -1,4 +1,5 @@
-{{Infobox Country |
+{{Infobox Country heheheh
+ |
 native_name = Canada |
 common_name = Canada |
 image_flag = Flag_of_Canada.svg |
