*Empty MediaWiki Message*

--- a/Agusu.mw
+++ b/Agusu.mw
@@ -16,6 +16,7 @@
 |subdivision = ''C. e.'' subsp. ''equisetifolia''<br>
 ''C. e.'' subsp. ''incana''
 |}}
+[[File:Casuarina equisetifolia MHNT.BOT.2016.24.39.jpg|thumb|''Casuarina equisetifolia”]]
 
 Ing '''agusu''' (''Casuarina equisetifolia'') metung yang species ning genus ''[[Casuarina]]''. The native range extends from Ing katutubu nang angganan (''native range'') manibat ya king [[Burma]] ampong [[Vietnam]] angga king kabilugan ning [[Malesia]] paras king [[aslagan]] king [[French Polynesia]], [[New Caledonia]], ampong [[Vanuatu]], at papuntang [[mauli]] king [[Australia]] (pangulu ning [[Northern Territory]], [[pangulu]] ampong [[aslagan]]g [[Queensland]], ampong [[pangulu]]ng-[[aslagan]]g [[New South Wales]]).<ref name=ftoa>{{cite book|last=Boland|first=D. J.|first2=M. I. H.|last2=Brooker|first3=G. M.|last3=Chippendale|first4=M. W.|last4=McDonald|title=Forest trees of Australia|year=2006|publisher=CSIRO Publishing|location=Collingwood, Vic.|isbn=0-643-06969-0|url=http://books.google.com.au/books?id=q2v3kb9tFsYC&lpg=PP1&dq=ISBN%200643069690&pg=PA82#v=onepage&q&f=false|edition=5th ed.|page=82}}</ref> Populations are also found in [[Madagascar]], but it is doubtful if this within the native range of the species.<ref name=foa>{{cite web|title=Casuarina equisetifolia L., Amoen. Acad. 143 (1759)|url=http://www.anbg.gov.au/abrs/online-resources/flora/stddisplay.xsql?pnid=38586|work=Australian Biological Resources Study|publisher=Australian National Botanic Gardens|accessdate=23 April 2011}}</ref><ref>http://www.worldagroforestrycentre.org/sea/Products/AFDbases/AF/asp/SpeciesInfo.asp?SpID=477</ref> Midala ya ing species king [[Mauli]] nang dake ning [[Estados Unidos]] ampo king [[Albugan]] [[Africa]].<ref>{{cite web|title=Plant for the Planet: Billion Tree Campaign|url=http://www.unep.org/pdf/BTC_Booklet.pdf|work=United Nations Environment Programme|accessdate=23 April 2011}}</ref> Metung yang [[mapanyakup a species]] (''invasive species'') king  [[Florida]].<ref>{{cite web|title=Biological control of Australian native Casuarina species in the USA|url=http://www.csiro.au/science/ps334.html|work=Commonwealth Scientific and Industrial Research Organisation|accessdate=16 September 2010|date=16 May 2007}}</ref><ref>{{cite web | last = Masterson | first = J | title = Casuarina equisetifolia (Australian Pine) | location = Fort Pierce | publisher = Smithsonian Marine Station | url = http://www.sms.si.edu/irlspec/Casuarina_equisetifolia.htm | accessdate = 5 May 2009}}</ref>
 
