Replacing Distribution-ceb.png with [[File:Distribution_of_cebuano_language.png]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#reasons|File renaming criterion #2]]: To change from a meaningless or ambigu

--- a/Amanung_Cebuanu.mw
+++ b/Amanung_Cebuanu.mw
@@ -1,4 +1,4 @@
-[[File:Distribution-ceb.png|thumb|Deng lugal a magsalita ning Cebuanu]]
+[[File:Distribution of cebuano language.png|thumb|Deng lugal a magsalita ning Cebuanu]]
 Ing '''Amanung Cebuanu''' (''Cebuano'', ''Sebwanu'', ''Bisaya'', ''Sugbuanon'', ''Sinugbuanon'', ''Sinugbuanong Bisaya''), metung ya kareng pamyalita king [[Pilipinas]].
 
 {{Suli}}
