Replacing Distribution-ceb.png with [[File:Distribution_of_cebuano_language.png]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#reasons|File renaming criterion #2]]: To change from a meaningless or ambigu

--- a/Template:Pilipino.mw
+++ b/Template:Pilipino.mw
@@ -16,7 +16,7 @@ desc none
 </imagemap>
  |
 <imagemap>
-Image:Distribution-ceb.png|55px|''Sugbo''
+Image:Distribution of cebuano language.png|55px|''Sugbo''
 rect 0 0 2000 3120 [[:ceb:]]
 desc none
 </imagemap>
