Removing [[:c:File:MatsuoBashoChusonji.jpg|MatsuoBashoChusonji.jpg]], it has been deleted from Commons by [[:c:User:Jameslwoodward|Jameslwoodward]] because: per [[:c:Commons:Deletion requests/File:MatsuoBashoChusonji.jpg|]].

--- a/Matsuo_Bashō.mw
+++ b/Matsuo_Bashō.mw
@@ -1,7 +1,7 @@
 {{Japanese name|Matsuo}}
 {{Infobox writer
 | name         = Matsuo Bashō (松尾 芭蕉)
-| image        = MatsuoBashoChusonji.jpg
+| image        =
 | alt          = A statue of Matsuo in Hiraizumi, Iwate
 | caption      = Metung a istatwa nang Matsuo king [[Hiraizumi, Iwate]]
 | pseudonym    = Sōbō (宗房)<br />Tōsē (桃青)<br />Bashō (芭蕉)
