*Empty MediaWiki Message*

--- a/Basilicata.mw
+++ b/Basilicata.mw
@@ -18,7 +18,7 @@
   populationpercent = 1.0 |
   populationdensity = 59 |
   coatofarms        = [[File:Flag of Basilicata.svg|220px]] | 
-  map               = [[File:Italy Regions Basilicata 220px.png]] |
+  map               = [[File:Italy Regions Basilicata Map.png]] |
 }}
 
 
