*Empty MediaWiki Message*

--- a/David_Baszucki.mw
+++ b/David_Baszucki.mw
@@ -1,3 +1,1 @@
-
-g
-vgNEVER READ THIS AGAIN DAVID BASZUKI IS PRIVATE.!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+hounther is best gayman in the world!!!
