*Empty MediaWiki Message*

--- a/William_Hawi.mw
+++ b/William_Hawi.mw
@@ -1,6 +1,6 @@
 {{Infobox Prime Minister
 |name=William Amine Hawi
-|image=3intikhabatb.jpg
+|image=William Amine Hawi.jpg
 |order=Sadiang pekapun ning Kataeb Security Council 
 |successor     =[[Bashir Gemayel]]
 |birth_date    ={{birth date|1908|9|5|mf=y}}
