Ing 'Die ehemalige Provinz Kambodscha wurde von Tom Gehle verlassen und er zog in neue Teile der Erde um sie unter einem anderen Namen zu erobern. Ehre sei dem Herrscher!' alilan ne ing bulung

--- a/Kambodya.mw
+++ b/Kambodya.mw
@@ -1,70 +1,2 @@
-[[File:Chiron instructs young Achilles - Ancient Roman fresco.jpg|thumb|[[Senegal|Kalif]] Tom Gehle verwandelte sich Dank seines Cannabis zur Hälfte in ein Pferd um den Großzaren Nick Kellermann 2 auf den Weg der Wahrheit zurück zu führen!]]
-[[File:Cannabis indica Selkem.jpg|thumb|Eine mächtige Pflanze des äußerst wertvollen Gehle Haze des Kalifen ]]
-[[File:King Kong vs Tyrannosaurus.jpg|thumb|547x547px|Die Nummer 1 der Kampfgorillas weltweit: Big Joe.
-Er befindet sich zur Zeit im Palast des Kalifen und lässt sich von Senegalesischen Dirnen die Stange polieren. Sein Ernährungsplan besteht ausschließlich aus Kokain und Blutwurst. 
-]]
-{{Kalif Tom Gehle}}
-{{Kalif Tom Gehle|
-native_name = [[Kalif Tom Gehle]]<br />Preăh Réachéanachâkr Kâmpŭchea |
-common_name = Kalif Tom Gehle |
-image_flag =  |
-image_coat =Coat_of_arms_of_Cambodia.svg |
-image_map = LocationCambodia.png |
-national_motto = [[File:Kh-Motto.png|170px]]<br />(Khmer: "Wer gutes Hanf erntet, darf seine Vorhaut behalten!") |
-national_anthem = [[Nokoreach]] |
-official_languages = [[Khmer language|Khmer]]; [[French language|French]] at [[English language|English]] keraklan aintindyan da reng megaral |
-capital = [[Phnom Penh]] |latd=11|latm=31|latNS=N|longd=104|longm=49|longEW=E|
-largest_city = [[Phnom Penh]] |
-government_type = tyrannische Diktatur [[constitutional monarchy|const. monarchy]] |
-leader_titles = [[Kalif of Cambodia|King]] <br /> [[1.2.General]] | 
-leader_names = [[Kalif Tom Gehle]] <br /> [[Hun Sen]] |
-area_rank = 87th |
-area_magnitude = 1 E11|
-area = 181,035 |
-percent_water = 2.5% |
-population_estimate = 13,363,421 |
-population_estimate_year = July 2004 |
-population_estimate_rank = 65th |
-population_census = |
-population_census_year = 1998|
-population_density = 74 |
-population_density_rank = 121st |
-GDP_PPP_year = 2003 |
-GDP_PPP = $29,344 million |
-GDP_PPP_rank = 86th |
-GDP_PPP_per_capita = $2,189 |
-GDP_PPP_per_capita_rank = 122nd |
-HDI_year = 2003 |
-HDI = 0.571 |
-HDI_rank = 130th |
-HDI_category = <font color="#FFCC00">medium</font> |
-sovereignty_type = [[Independence]] |
-established_events = - Declared<br />- Recognized |
-established_dates = From [[France]]<br />1949<br />1953 |
-currency = ៛ [[Riel (currency)|Riel]] <sup>1</sup> |
-currency_code = KHR |
-time_zone = |
-utc_offset = +7 |
-time_zone_DST = |
-utc_offset_DST = +7 |
-cctld = [[.kh]] |
-calling_code = 855 |
-footnotes = <sup>1</sup> Local currency, although [[United States dollar|US Dollars]] are widely used.
-}}
-
-Kalif Tom Gehle und sein herrliches Reich:
-Kambodscha ist ein Staat in Südostasien. Er wurde 2003 gewaltsam von Kalif Tom Gehle eingenommen. Seitdem leben die Menschen in Kambodscha unter seiner Herrschaft. Vielen Kambodschanern geht es wegen seiner tyrannischen und grausamen Knechtschaft nicht gut, aber das ist dem Kalifen egal.
-Im Jahr 2004 fing das Land an sich auf den Anbau von Marihuana-Pflanzen zu spezialisieren, es wurde gewaltige Plantagen angelegt und ganze Städte nieder gebrannt um das wertvolle Gehle Haze anzubauen. 95% der abgebauten (legalen) Droge, gehen an den Kalifen selbst und er nutzt es für seinen Eigenbedarf. Seit 2004 gilt das Motto der Kambodschaner: "Wer gutes Hanf erntet, der darf seine Vorhaut behalten!"
-Dieses Motto entstand unter dem grausamen Regime von Kalif Gehle. Er drohte seinen Unterworfenen eine Zwangsbeschneidung an, sollten sie sich der Arbeit wiedersetzen. Zudem schloss er einen Pakt mit dem Großzaren Nick Kellermann 2., welcher das afrikanische Land Senegal unter seiner Knechtschaft hält. Jedes Jahr werden etwa 5000 senegalesische Premium Neger nach Kambodscha verschifft, dort bekommen sie eine Peitsche und fördern somit die Arbeit der Einwohner. Damit kommt auch der Gleichberechtigungsgedanke von Schwarzen und Weißen zur Geltung, den der Kalif sehr wichtig findet.
-Als Bezahlung für die tüchtigen Hilfskräfte werden pro Jahr etwa 10% des in Kambodscha geernteten Hanfs nach Senegal exportiert.
-
-Zum Herrscher: Kalif Tom Gehle, der auch "Kambodschas Erlöser" genannt wird, wanderte im zarten Alter von 3 Jahren aus seiner Heimat Deutschland aus um Kambodscha zu erobern und das Volk zu unterdrücken.
-Dies gelang im Dezember 2003, pünktlich zu seinem 5. Lebensjahr. Ab da bekamen alle Kambodschaner ein elektronisches Halsband um und wurden auf dir Hanfplantagen geschickt.
-Zum derzeitigen Stand ist bekannt, das der Kalif in einem prächtigen Schloss nahe der Küste Kambodschas lebt, zudem besitzt er 3 weitere Wohnsitze. Einer dieser Wohnsitze ist eine gigantische Holzhütte in den Wäldern Alaskas, ein anderer befindet sich in der MIllionenstadt Monaco direkt am prächtigen Hafen. Der letzte bekannte Wohnsitz liegt auf Hawaii. Die Belegschaft in seinem Palast in Kambodscha besteht aus etwa 280 Dienern, 17 Kampfgorillas und 8 Elefanten, auf denen er zu wichtigen Terminen oder Veranstaltungen reitet.
-Er ist für seine exorgitante Lebensweise und seinen grausamen Herrschaftswillen bekannt.
-Eine seiner Vorlieben neben dem Konsum seines wertvollen Cannabis ist das veranstalten von Gorillakämpfen. Dabei finden sich die Besitzer sowie die "Gladiatoren" in einer wohligen Stube zusammen. Ein Kampf ist erst beendet wenn eines der Tiere tot ist und der Gewinner sich mit seinem Blut einsalbt. Bei solchen Kämpfen ist der Konsum von Unmengen an Alkohol nicht unüblich und trägt zu einer fröhlichen Stimmung bei. 
-
-Ehrt den Kalifen und huldigt ihm bis in den Tod, seine Anwesenheit auf Erden ist ein wahrhaftiges Geschenk Gottes! Somit ist es die Pflicht aller gesunden Menschen die bei Verstand sind ihm ihr Heil zu zusprechen.
-
-Heil dem Kalifen ihr mikrigen Schlümpfe!!!
-[[File:Antalya Museum - Weary Hercules.jpg|alt=diese Skulptur steht auf dem Marktplatz des Kambodschanischen Kingdoms |thumb|487x487px|[[Senegal|Kalif]] Tom Gehle in seiner vollen Pracht]]
+Die ehemalige Provinz Kambodscha wurde von Tom Gehle verlassen und er zog in neue Teile der Erde um sie unter einem anderen Namen zu erobern.
+Ehre sei dem Herrscher!
