*Empty MediaWiki Message*

--- a/Jamaica.mw
+++ b/Jamaica.mw
@@ -3,18 +3,18 @@
 | image_coat = Jamaica coa.png
 | image_map = LocationJamaica.png
 | national_motto = Out of many, one people
-| national_anthem =''[[Jamaica, Land We Love]]''<br />[[Royal anthem]]: ''[[God Save the Queen]]''
+| national_anthem =''[[Jamaica, Land We Love]]''<br />[[Royal anthem]]: ''[[God Save the King]]''
 | official_languages = [[English language|English]]
 | capital =[[Kingston, Jamaica|Kingston]] 
 | latd=17 |latm=59 |latNS=N |longd=76 |longm=48 |longEW=W
 | largest_city =[[Kingston, Jamaica|Kingston]] 
-| government_type =[[Constitutional monarchy]]
-| leader_title1 =[[Monarch of Jamaica|Monarch]]
-| leader_title2 = [[List of Governors-General of Jamaica|Governor-General]]
-| leader_title3 = [[Prime Minister of Jamaica|Prime Minister]] 
-| leader_name1 =[[Elizabeth II of the United Kingdom|Elizabeth II]]
-| leader_name2 = [[Kenneth Hall]]
-| leader_name3 = [[Portia Simpson-Miller]] 
+| government_type =[[Dynastie]]
+| leader_title1 =[[Prinz von Jamaica]]
+| leader_title2 = [[Governer von Jamaica]]
+| leader_title3 = [[Lieutnant 1. der jamaicanischen Army]] 
+| leader_name1 =[[Tom Gehle]]
+| leader_name2 = [[Usain Bolt]]
+| leader_name3 = [[Snoop Dogg]] 
 | area_rank =166th 
 | area_magnitude =1 E10 
 | area=10,991
@@ -34,8 +34,8 @@
 | GDP_PPP_per_capita =$4,300  
 | GDP_PPP_per_capita_rank = 114th
 | sovereignty_type = [[Independence]]
-| established_event1 =From the [[United Kingdom|UK]]
-| established_date1 = [[August 6]], [[1962]]
+| established_event1 =From the [[Würdinghausen]]
+| established_date1 = [[Frebruar 13.]], [[2017]
 | HDI =0.738 
 | HDI_rank = 98th
 | HDI_year = 2003
